# pyatnashki

./: README.md  pyproject.toml
pyatnashki/: main.py
pyatnashki/routes/: route.py
pyatnashki/schemas/: requestschema.py
